# redis-aggregation

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  default.nix  docker.nix  pyproject.toml  shell.nix  tests.py
.github/workflows/: default.yaml
integration_tests/: conftest.py  default.nix  test_basic.py
src/: lib.rs
