[package]
name = "redis-aggregation"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

[lib]
name = "redis_aggregation"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_tuple = "0.2"
redismodule = {path = './redismodule-rs'}
