[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["yihuang <yi.codeplayer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pep8-naming = "^0.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
