[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["yihuang <yi.codeplayer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pep8-naming = "^0.11.1"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
pytest-github-actions-annotate-failures = "^0.1.0"
credis = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
